# hydra-check

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix  package.nix
.github/workflows/: release.yml  test.yml
examples/: eval-filter.rs  faketty-run.rs  utils.rs
examples/faketty-run/: main.rs
examples/faketty-run/faketty/: mod.rs
patches/: snapbox@0.6.21.patch
src/: args.rs  build.rs  builds.rs  constants.rs  eval.rs  fetch_stable.rs  jobset.rs  lib.rs  main.rs  parse.rs  soup.rs  testing.rs
src/hydra_check/: arguments.py  cli.py  evals.py
src/queries/: evals.rs  jobset.rs  mod.rs  packages.rs
src/structs/: build.rs  builds.rs  eval.rs  icons.rs
