[package]
name = "hydra-check"
version = "2.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.20", features = ["derive"] }
colored = "2.1.0"
comfy-table = "7.1.1"
ego-tree = "0.6" # compatible with scraper
flexi_logger = "0.29.3"
log = "0.4.22"
regex = "1.11.0"
reqwest = { version = "0.12.8", features = ["blocking", "cookies", "gzip"] }
scraper = "0.20.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
serde_with = "3.11.0"
